[FIX] button legibility by adding CSS for a new style, for now

--- a/javascript/css/style.css
+++ b/javascript/css/style.css
@@ -571,6 +571,32 @@
 			{
 			}
 			
+	/* IO HAVOC Buttons */			
+		.btn {
+		
+		
+		 position: relative;
+		 display: inline-block;
+		 text-align: center;
+		 border: 0;
+		 cursor: pointer;
+		 outline: 0;
+			
+		  -webkit-border-radius: 6;
+		  -moz-border-radius: 6;
+		  border-radius: 0.5em;
+		  color: #ed1d1d;
+		  font-size: 1.25em;
+		  background: #f0eceb;
+		  padding: 0.35em 1.5em 0.35em 1.5em;
+		  text-decoration: none;
+		}
+
+		.btn:hover {
+		  background: #e0e0e0;
+		  text-decoration: none;
+		}
+			
 	/* Posts */
 
 		.post
